--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
      <div class="card text-white bg-primary">
        <img class="card-img-top"  alt="Title">
        <div class="card-body">
-         <h4 class="card-title">card title</h4>
-         <p class="card-text">card text</p>
+         <h4 class="card-title">card title by 1</h4>
+         <p class="card-text">card text by 1</p>
        </div>
      </div>
 
